# telegram-pdf-bot

./: .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: snyk-scan.yml  test-build-deploy.yml  update-l10n-sources.yml
