[tool.poetry]
name = "pdf-bot"
version = "1.0.0"
description = "Telegram bot that can do a lot of things related to PDF files."
authors = ["zeshuaro <zeshuaro@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
Babel = "2.9.1"
Flask = "2.0.2"
google-cloud-datastore = "2.3.0"
gunicorn = "20.1.0"
humanize = "3.12.0"
img2pdf = "0.4.3"
Logbook = "1.5.3"
matplotlib = "3.4.3"
ocrmypdf = "12.7.1"
pdfCropMargins = "1.0.5"
pdf2image = "1.16.0"
"pdfminer.six" = "20211012"
python-dotenv = "0.19.1"
python-telegram-bot = "13.7"
Pillow = "8.4.0"
pycld3 = "0.22"
PyPDF2 = "1.26.0"
requests = "2.26.0"
slack-sdk = "3.11.2"
weasyprint = "52.5"
noteshrink = {git = "https://github.com/zeshuaro/noteshrink"}
pdf-diff = {git = "https://github.com/zeshuaro/pdf-diff"}

[tool.poetry.dev-dependencies]
black = "21.5b2"
isort = "5.9.3"
pre-commit = "2.15.0"
pylint = "2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.message-control]
disable = [
    "consider-using-f-string",
    "consider-using-with",
    "duplicate-code",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-many-arguments",
    "too-many-branches",
    "too-many-locals",
    "too-many-return-statements",
    "unspecified-encoding",
]
